package com.foxmindedjavaspring.model;

public enum ExamState {
    UPCOMING,
    ONGOING,
    CLOSED
}
