@startuml
'!theme plain
!theme blueprint
skinparam BackgroundColor #000c18
'skinparam ClassBackgroundColor #000c18
skinparam linetype ortho

title University Class Diagram
class Person{
    firstName: String
    lastName: String
    birthday: LocalDate
    gender: String
    phone: String
    email: String
    address: String
    ..
    setPhone(String phone): void
    setEmail(String email): void
    setAddress(String address): void
}
class Student{
    startDate: LocalDate
    courses: List<CourseEvent>
    exams: List<ExamEvent>
    state: StudentState
    ..
    setState(StudentState state): void
}
enum StudentState{
    ACTIVE
    TERMINATED
    ABSOLVENT
}
class UnivercityStaff{
    staffId: String
    title: String
}
class Subject{
    number: Integer
    name: String
    description: String
}
class Course{
    topic: String
    subject: Subject
    description: String
}
class CourseEvent{
    course: Course
    startDate: LocalDate
    lecturer: Lecturer
    numberOfHours: Integer
    rate: Integer
    ..
    setLecturer(Lecturer lecturer): void
    setNumberOfHours(Integer hours): void
    setRate(Integer rate): void
}
class Lecturer{
    level: String
    ..
    setLevel(String level): void
}
class Exam{
    title: String
    description: String
}
class ExamEvent{
    exam: Exam
    date: LocalDate
    status: ExamState
    lab: Integer
    rate: Integer
    ..
    setDate(LocalDate examDate): void
    setStatus(ExamState state): void
    setLab(Integer lab): void
    setRate(Integer rate): void
}
enum ExamState{
    UPCOMING
    ONGOING
    CLOSED
}
class Faculty{
    department: String
    address: String
    subjects: List<Subject>
}
class Univercity {
    name: String
    hqLocation: String
    faculties: List<Faculty>
}
class Lecture{
    CourseEvent: CourseEvent
    startTime: LocalDateTime
    lab: Integer
    ..
    setStartTime(LocalDateTime time): void
    setLab(Integer lab): void
}
interface TimetableService{
    getTimetableForDay(): List<Lecture>
    getTimetableForMonth(): List<Lecture>
}
class StudentService {
    addCourseEvent(CourseEvent event): void
    removeCourseEvent(CourseEvent event): void
    addExamEvent(ExamEvent event): void 
    removeExamEvent(ExamEvent event): void
}
class LecturerService

Person <|-right- UnivercityStaff
UnivercityStaff <|-- Student
UnivercityStaff <|-- Lecturer
Student *-up- StudentState
Student *-- CourseEvent
CourseEvent *-up- Lecturer
Student o-up- ExamEvent
ExamEvent o-- Exam
ExamEvent *-right- ExamState
CourseEvent o-- Course
Course o-left- Subject
Faculty *- Subject
Univercity *-- Faculty
Student <... StudentService
StudentService <|.. TimetableService
LecturerService <|.. TimetableService
LecturerService .> Lecturer
TimetableService .left.> Lecture
CourseEvent --o Lecture

legend
The getters are omitted
The setters shown only for non-final fields
endlegend

@enduml